<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manual_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp"
    tools:context="com.jia.adv.manual_control">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="controlLeft"
            android:text="@string/manual_left"
            android:id="@+id/buttonLeft"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".6"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".4"
            android:onClick="backToMain"
            android:text="@string/manual_to_main"
            android:id="@+id/manualToMain"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="controlForward"
            android:text="@string/manual_forward"
            android:id="@+id/buttonUp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="controlStop"
            android:text="@string/manual_stop"
            android:id="@+id/buttonStop"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="controlBackward"
            android:text="@string/manual_backward"
            android:id="@+id/buttonDown"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:onClick="controlRight"
            android:text="@string/manual_right"
            android:id="@+id/buttonRight"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="controlRight"
            android:text="@string/lift_up"
            android:id="@+id/buttonLiftUp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="controlRight"
            android:text="@string/lift_halt"
            android:id="@+id/buttonLiftStop"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="controlRight"
            android:text="@string/lift_down"
            android:id="@+id/buttonLiftDown"/>

    </LinearLayout>

</LinearLayout>
