<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:hint="@string/ip_hint"
            android:text="192.168.0.100"
            android:inputType="number"
            android:digits="0123456789."
            android:maxLength="16"
            android:id="@+id/input_ip_addr"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".4"
            android:onClick="automaticControl"
            android:text="@string/automatic_control"
            android:id="@+id/buttonAutomatic"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".4"
            android:onClick="manualControl"
            android:text="@string/manual_control"
            android:id="@+id/buttonManual"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:onClick="advConnect"
            android:text="@string/connect_device"
            android:id="@+id/connectToADV"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".4"
            android:onClick="vehicleCamera"
            android:text="@string/check_camera"
            android:id="@+id/buttonCamera"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".4"
            android:onClick="enterDatabase"
            android:text="@string/enter_data"
            android:id="@+id/buttonDatabase"/>
    </LinearLayout>

</LinearLayout>